
# Autoconf requirements
AC_PREREQ([2.61])

# information on the package
AC_INIT(dist, 1.0.0)
AC_CONFIG_HEADERS([include/config.h])
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

# information on the package
# checks for programs
AC_PROG_LIBTOOL

# checks for libraries
# checks for header files
# checks for types
# checks for structures
# checks for compiler characteristics
# checks for library functions
# checks for system services

AC_CONFIG_FILES([Makefile \
	include/Makefile \
	library/Makefile \
	source/Makefile \
	test/Makefile])
AC_OUTPUT

